Criação da base das páginas do menu dropdown

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,10 +31,10 @@
                         Nossa Igreja
                     </a>
                     <div class="dropdown-menu dropdown-menu-shadow" aria-labelledby="nossaIgrejaDropdown">
-                        <a class="dropdown-item" href="#">História</a>
-                        <a class="dropdown-item" href="#">Liderança</a>
-                        <a class="dropdown-item" href="#">Departamentos</a>
-                        <a class="dropdown-item" href="#">Congregações</a>
+                        <a class="dropdown-item" href="{% url 'historia' %}">História</a>
+                        <a class="dropdown-item" href="{% url 'lideranca' %}">Liderança</a>
+                        <a class="dropdown-item" href="{% url 'departamentos' %}">Departamentos</a>
+                        <a class="dropdown-item" href="{% url 'congregacoes' %}">Congregações</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
