Edição das outras páginas do menu "Nossa Igreja"

--- a/templates/base.html
+++ b/templates/base.html
@@ -96,17 +96,22 @@
         <footer class="footer">
           <div class="footer-container">
             <div class="footer-left">
-              <h3>Isaías 55. 3-6</h3>
-              <p>3 Inclinai os vossos ouvidos, e vinde a mim; ouvi, e a vossa alma viverá; porque convosco farei uma aliança perpétua, dando-vos as firmes beneficências de Davi.</p>
-              <p>4 Eis que eu o dei por testemunha aos povos, como líder e governador dos povos.</p>
-              <p>5 Eis que chamarás a uma nação que não conheces, e uma nação que nunca te conheceu correrá para ti, por amor do Senhor teu Deus, e do Santo de Israel; porque ele te glorificou.</p>
-              <p>6 Buscai ao Senhor enquanto se pode achar, invocai-o enquanto está perto.</p>
+              <h3>Gálatas 6. 2-10</h3>
+              <p>² Levai as cargas uns dos outros, e assim cumprireis a lei de Cristo.</br>
+                 ³ Porque, se alguém cuida ser alguma coisa, não sendo nada, engana-se a si mesmo.</br>
+                 ⁴ Mas prove cada um a sua própria obra, e terá glória só em si mesmo, e não noutro.</br>
+                 ⁵ Porque cada qual levará a sua própria carga.</br>
+                 ⁶ E o que é instruído na palavra reparta de todos os seus bens com aquele que o instrui.</br>
+                 ⁷ Não erreis: Deus não se deixa escarnecer; porque tudo o que o homem semear, isso também ceifará.</br>
+                 ⁸ Porque o que semeia na sua carne, da carne ceifará a corrupção; mas o que semeia no Espírito, do Espírito ceifará a vida eterna.</br>
+                 ⁹ E não nos cansemos de fazer bem, porque a seu tempo ceifaremos, se não houvermos desfalecido.</br>
+                 ¹⁰ Então, enquanto temos tempo, façamos bem a todos, mas principalmente aos domésticos da fé.</p>
             
               
               <div class="social-links">
-                <a href="#"><img src="{% static '/fotos/ícones/instagram-preta.png' %}" alt="Instagram"></a>
-                <a href="#"><img src="{% static '/fotos/ícones/youtube-preta.png' %}" alt="YouTube"></a>
-                <a href="#"><img src="{% static '/fotos/ícones/whatsapp-preta.png' %}" alt="WhatsApp"></a>
+                <a href="https://www.instagram.com/_2ibca/" target="_blank"><img src="{% static '/fotos/ícones/instagram-preta.png' %}" alt="Instagram"></a>
+                <a href="https://www.youtube.com/@2IBCARECIFE " target="_blank"><img src="{% static '/fotos/ícones/youtube-preta.png' %}" alt="YouTube"></a>
+                <a href="https://wa.me/message/YHZLZY6LT73HO1" target="_blank"><img src="{% static '/fotos/ícones/whatsapp-preta.png' %}" alt="WhatsApp"></a>
               </div>
             </div>
             <div class="footer-about">
