--- a/templates/departamentos.html
+++ b/templates/departamentos.html
@@ -6,7 +6,7 @@
 {% block content %}
 <section class="py-5" style="background-color: #f8f9fa;">
     <div class="container text-center">
-        <h1 class="mb-4">Nossos Departamentos</h1>
+        <h1 class="mb-4"><strong> Nossos Departamentos </strong></h1>
         <img src="{% static 'fotos/desenho.jpg' %}" alt="Fachada da Igreja" class="img-fluid rounded shadow" style="max-height: 400px; object-fit: cover;">
     </div>
 </section>
