--- a/templates/lideranca.html
+++ b/templates/lideranca.html
@@ -29,4 +29,23 @@
   </div>
 </section>
 
+<section class="pessoa-card-section">
+  <div class="container">
+    <h2 class="titulo-pessoa">Conselho Diaconal</h2>
+
+    <p class="descricao-pessoa">
+      Conheça quem atua no Conselho Diaconal da nossa igreja.
+    </p>
+
+    <div class="pessoas-wrapper">
+      <div class="pessoa-card animate-fade-in">
+        <img src="{% static '/fotos/wanderley.jpeg' %}" alt="Dc. Wanderley Cavalcante">
+        <h3>Dc. Wanderley Cavalcante</br>Presidente do Conselho Diaconal</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+
 {% endblock %}
