ajuste no tamanho e mudança do formato da imagem fotos/diacono.jpg

--- a/templates/lideranca.html
+++ b/templates/lideranca.html
@@ -39,7 +39,7 @@
 
     <div class="pessoas-wrapper">
       <div class="pessoa-card animate-fade-in">
-        <img src="{% static '/fotos/wanderley.jpeg' %}" alt="Dc. Wanderley Cavalcante">
+        <img src="{% static '/fotos/diacono.jpg' %}" alt="Dc. Wanderley Cavalcante">
         <h3>Dc. Wanderley Cavalcante</br>Presidente do Conselho Diaconal</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor.</p>
       </div>
