--- a/templates/lideranca.html
+++ b/templates/lideranca.html
@@ -16,6 +16,7 @@
       <div class="pessoa-card animate-fade-in animate-delay">
         <img src="{% static '/fotos/joao.jpg' %}" alt="Pastor João">
         <h3>Pastor João Gomes</h3>
+        <h4 class="cargo">Pastor Presidente</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor.</p>
       </div>
 
@@ -23,6 +24,7 @@
       <div class="pessoa-card animate-fade-in animate-delay">
         <img src="{% static '/fotos/romildo.jpg' %}" alt="Pastor Romildo">
         <h3>Pastor Romildo Melo</h3>
+        <h4 class="cargo">Pastor Vice-Presidente</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor</p>
       </div>
     </div>
@@ -34,14 +36,15 @@
     <h2 class="titulo-pessoa">Conselho Diaconal</h2>
 
     <p class="descricao-pessoa">
-      Conheça quem atua no Conselho Diaconal da nossa igreja.
+      Conheça os membros do Corpo Diaconal da nossa igreja.
     </p>
 
     <div class="pessoas-wrapper">
       <div class="pessoa-card animate-fade-in">
         <img src="{% static '/fotos/diacono.jpg' %}" alt="Dc. Wanderley Cavalcante">
-        <h3>Dc. Wanderley Cavalcante</br>Presidente do Conselho Diaconal</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor.</p>
+        <h3>Dc. Wanderley Cavalcanti</h3>
+        <h4 class="cargo">Presidente do Conselho Diaconal</h4>
+        <p>Consagrado ao diaconato na Assembléia de Deus PE em 2009, têm servido na nossa igreja desde 2019</p>
       </div>
     </div>
   </div>
