Modificações em historia.html e historia.css e ajustes no footer em base.html.

--- a/templates/base.html
+++ b/templates/base.html
@@ -92,11 +92,11 @@
     </main>
 
     <!-- Rodapé -->
-    <footer class="footer">
+    <footer class="footer" style="background-color: #fc9c69;">
 
         <!--  (Aqui também deve ajustar os ícones para usar static se tiver imagens no rodapé) -->
       
-        <footer class="footer">
+        <footer class="footer-container">
           <div class="footer-container">
             <div class="footer-left">
               <h3>Gálatas 6. 2-10</h3>
